@startuml
interface Computer{
    void produce()
}

interface ComputerFactory{
    Computer createComputer()
}

class HPComputer implements Computer{
    + public void produce()
}

class DellComputer implements Computer{
    + public void produce()
}

class AcerComputer implements Computer{
    + public void produce()
}

class LenovoComputer implements Computer{
    + public void produce()
}



class HPComputerFactory implements ComputerFactory{
    + Computer createComputer()
}
class DellComputerFactory implements ComputerFactory{
    + Computer createComputer()
}
class AcerComputerFactory implements ComputerFactory{
    + Computer createComputer()
}
class LenovoComputerFactory implements ComputerFactory{
    + Computer createComputer()
}

HPComputerFactory ..> HPComputer
DellComputerFactory ..>DellComputer
AcerComputerFactory..>AcerComputer
LenovoComputerFactory..>LenovoComputer
@enduml